@@ -7,6 +7,8 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- updated TiLP to follow the slightly modified FLASH app dirlist format
 	- fixed 'bug' #1499672: sorting by name is case insensitive for now.
 	- fixed bug #1499672: sorting by type didn't work properly on the pc-panel
+	- implemented sending of several FLASH app at once
+	- allowed simultaneous sending of apps & vars
 
 - 28/05/2006, version 0.14 (0.1.0, 0.1.3, 0.1.4, 0.0.3): roms
 	- fixed USB device reconnection
